--- a/index.html
+++ b/index.html
@@ -102,6 +102,79 @@
         Tortor nibh magna feugiat id nunc, dui nisl viverra.
       </p>
     </section>
+    <section class="news">
+      <div class="news__block">
+        <div class="news__block-inner">
+        <h2 class="news__title">СЕЗОН 2020/21</h2>
+        <div class="news__decor"></div>
+        <ul class="news__list">
+          <li class="news__item">
+            <div class="news__vidget">
+              <img class="news__img" src="img/clock.png" alt="Часы" width="115" height="114">
+            </div>
+            <h3 class="news__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="news__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="news__item">
+            <div class="news__vidget">
+              <img class="news__img" src="img/clock.png" alt="Часы" width="115" height="114">
+            </div>
+            <h3 class="news__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="news__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="news__item">
+            <div class="news__vidget">
+              <img class="news__img" src="img/clock.png" alt="Часы" width="115" height="114">
+            </div>
+            <h3 class="news__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="news__p">
+              165 000 руб.
+            </p>
+          </li>
+        </ul>
+        </div>
+        <div class="news__block-inner news__block-inner--second">
+        <h2 class="news__title">
+          Новая коллекция
+        </h2>
+        <div class="news__decor"></div>
+        <a href="#" class="news__link">
+          Каталог
+        </a>
+        </div>
+        <div class="news__block-inner news__block-inner--third"></div>
+        <div class="news__block-inner">
+        <h2 class="news__title">
+          коллекция 2018
+        </h2>
+        <div class="news__decor"></div>
+        <p class="news__p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut
+          neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque
+          magna consectetur. Amet convallis quis gravida facilisis vulputate.
+          Faucibus facilisi habitasse ipsum interdum dictum aliquet.
+          Velit quis ullamcorper pulvinar nulla malesuada integer.
+          Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor.
+          Viverra viverra ullamcorper scelerisque risus dignissim egestas.
+          Id aliquam a aliquam egestas leo orci pharetra sed diam. 
+        </p>
+        <a href="#" class="news__link">
+          посмотреть коллекцию
+        </a>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
