--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     <section class="news">
       <div class="news__block">
         <div class="news__block-inner">
-        <h2 class="news__title">СЕЗОН <span class="news__span">2020/21</span></h2>
-        <div class="news__decor"></div>
-        <ul class="news__list">
+          <h2 class="news__title">СЕЗОН 2020/21</h2>
+          <div class="news__decor"></div>
+          <ul class="news__list">
           <li class="news__item">
             <div class="news__vidget">
               <img class="news__img" src="img/clock.png" alt="Часы" width="115" height="114">
@@ -141,7 +141,7 @@
               165 000 руб.
             </p>
           </li>
-        </ul>
+          </ul>
         </div>
         <div class="news__block-inner news__block-inner--second">
           <img src="img/new-collection.jpg" alt="Новая коллекция" class="news__img-big" width="610">
@@ -157,25 +157,141 @@
           <img src="img/jacket.jpg" alt="Человек в пиджаке" class="news__img-big" width="610">
         </div>
         <div class="news__block-inner">
-        <h2 class="news__title">
-          коллекция 2018
-        </h2>
-        <div class="news__decor"></div>
-        <p class="news__p-big">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut
-          neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque
-          magna consectetur. Amet convallis quis gravida facilisis vulputate.
-          Faucibus facilisi habitasse ipsum interdum dictum aliquet.
-          Velit quis ullamcorper pulvinar nulla malesuada integer.
-          Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor.
-          Viverra viverra ullamcorper scelerisque risus dignissim egestas.
-          Id aliquam a aliquam egestas leo orci pharetra sed diam. 
-        </p>
-        <a href="#" class="news__link">
-          посмотреть коллекцию
-        </a>
+          <h2 class="news__title">
+            коллекция 2018
+          </h2>
+          <div class="news__decor"></div>
+          <p class="news__p-big">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut
+            neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque
+            magna consectetur. Amet convallis quis gravida facilisis vulputate.
+            Faucibus facilisi habitasse ipsum interdum dictum aliquet.
+            Velit quis ullamcorper pulvinar nulla malesuada integer.
+            Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor.
+            Viverra viverra ullamcorper scelerisque risus dignissim egestas.
+            Id aliquam a aliquam egestas leo orci pharetra sed diam. 
+          </p>
+          <a href="#" class="news__link">
+            посмотреть коллекцию
+          </a>
         </div>
+      </div>
+    </section>
+    <section class="arrival">
+      <div class="arrival__block">
+        <h2 class="arrival__title">
+          новые поступления
+        </h2>
+        <div class="arrival__decor"></div>
+        <ul class="arrival__list">
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+          <li class="arrival__item"><div class="arrival__vidget">
+            <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+          </div>
+          <h3 class="arrival__subtitle">
+            Louis XVI ATHOS
+          </h3>
+          <p class="arrival__p">
+            165 000 руб.
+          </p></li>
+          <li class="arrival__item">
+            <div class="arrival__vidget">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            </div>
+            <h3 class="arrival__subtitle">
+              Louis XVI ATHOS
+            </h3>
+            <p class="arrival__p">
+              165 000 руб.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="brands">
+      <div class="brands__block">
+        <h2 class="brands__title">наши бренды</h2>
+        <div class="brands__decor"></div>
+        <ul class="brands__list">
+          <li class="brands__item">
+            <img src="img/brend.svg" alt="брэнд файн джэверли" class="brands__img" width="245">
+          </li>
+          <li class="brands__item">
+            <img src="img/brend.svg" alt="брэнд файн джэверли" class="brands__img" width="245">
+          </li>
+          <li class="brands__item">
+            <img src="img/brend.svg" alt="брэнд файн джэверли" class="brands__img" width="245">
+          </li>
+          <li class="brands__item">
+            <img src="img/brend.svg" alt="брэнд файн джэверли" class="brands__img" width="245">
+          </li>
+        </ul>
       </div>
     </section>
   </main>
