Доделал страницу остались правки

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <ul class="arrival__list">
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -198,7 +198,7 @@
           </li>
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -209,7 +209,7 @@
           </li>
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -220,7 +220,7 @@
           </li>
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -231,7 +231,7 @@
           </li>
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -242,7 +242,7 @@
           </li>
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -252,7 +252,7 @@
             </p>
           </li>
           <li class="arrival__item"><div class="arrival__vidget">
-            <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+            <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
           </div>
           <h3 class="arrival__subtitle">
             Louis XVI ATHOS
@@ -262,7 +262,7 @@
           </p></li>
           <li class="arrival__item">
             <div class="arrival__vidget">
-              <img class="arrival__img" src="img/clock.png" alt="Часы" width="215" height="214">
+              <img class="arrival__img" src="img/clock.png" alt="Часы" width="205" height="204">
             </div>
             <h3 class="arrival__subtitle">
               Louis XVI ATHOS
@@ -294,6 +294,61 @@
         </ul>
       </div>
     </section>
+    <section class="store">
+      <ul class="store__list">
+        <li class="store__item">
+          <h2 class="store__title">О магазине</h2>
+          <p class="store__p">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Mi semper viverra nunc cursus tortor lectus nunc nulla nibh.
+            Egestas amet consectetur vel vitae aliquam dictum suspendisse. Lobortis eget consequat,
+            tellus et et sed turpis. Pretium quisque vitae, amet, porttitor odio ultricies
+            massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi, nunc.
+          </p>
+        </li>
+        <li class="store__item">
+          <h2 class="store__title">Категории</h2>
+          <ul class="store__list-inner">
+            <li class="store__item-inner">
+              <a href="#" class="store__link">Часы</a>
+            </li>
+            <li class="store__item-inner">
+              <a href="#" class="store__link">Браслеты</a>
+            </li>
+            <li class="store__item-inner">
+              <a href="#" class="store__link">Ремни</a>
+            </li>
+            <li class="store__item-inner">
+              <a href="#" class="store__link">Ювелирные изделия</a>
+            </li>
+            <li class="store__item-inner">
+              <a href="#" class="store__link">Запонки</a>
+            </li>
+          </ul>
+        </li>
+        <li class="store__item">
+          <h2 class="store__title">Рассылка</h2>
+          <p class="store__p">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Mi semper viverra nunc cursus tortor lectus nunc nulla nibh.
+          </p>
+          <form action="#" method="POST" class="store__form">
+            <input type="email" name="email" value="Ваша почта" class="store__input">
+            <button class="store__button" type="submit">Подписаться</button>
+          </form>
+        </li>
+      </ul>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="footer__block">
+      <p class="footer__p">
+        © 2020 Все права защищены
+      </p>
+      <p class="footer__p">
+        © 2020 Все права защищены
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
